--- a/Tabang-Hub/Tabang-Hub/Content/Css/Style.css
+++ b/Tabang-Hub/Tabang-Hub/Content/Css/Style.css
@@ -1,4 +1,4 @@
-﻿.card {
+﻿﻿.card {
     transition: transform 0.2s, box-shadow 0.2s;
     cursor: pointer;
     border: none;
@@ -7,7 +7,7 @@
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
 }
 
-    /*.card:hover {
+/*.card:hover {
         transform: scale(1.05);
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
     }*/
