--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                             <a href="#" class="nav-link">Skill base</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">General</a>
+                            <a href="~/Volunteer/GeneralSkill" class="nav-link">General</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
